# easy-plugin

./: .editorconfig  .gitignore  ACCEPTANCE_TESTS.md  AGENTS.md  ARCHITECTURE.md  BRIDGE_PROTOCOL.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_PLAN.md  PLUGIN_SCHEMA.md  PRODUCT_SPEC.md  README.md  package.json  plugin.example.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-07-16T02-40-45-847Z.yml  page-2026-07-16T02-41-48-305Z.yml
builder/: README.md  package.json  tsconfig.json  tsconfig.tests.json
builder/src/: cli.ts  index.ts
builder/src/compatibility/: snapshot.ts
builder/src/generator/: generate.ts  render.ts
builder/src/schema/: errors.ts  model.ts  parse.ts
builder/src/validation/: run.ts
builder/tests/: compatibility.test.ts  fixtures.ts  generation.test.ts  schema.test.ts  validation.test.ts
examples/: README.md
frontend/: package.json  svelte.config.js  tsconfig.generated.json  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: generated.ts  parameter-store.ts  parameter-values.test.ts  parameter-values.ts  state-preset-store.test.ts  state-preset-store.ts  visualization-store.test.ts  visualization-store.ts
frontend/src/lib/bridge/: index.ts  juce-runtime.ts  mock.test.ts  mock.ts  native.test.ts  native.ts  types.ts
frontend/src/lib/components/: ParameterControl.svelte  PresetBrowser.svelte  VisualizationPanel.svelte
frontend/src/routes/: +page.svelte
native/src/: DspProcessor.cpp  DspProcessor.h  FactoryPresets.cpp  FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StateMigrations.cpp  StateMigrations.h
prompts/: 01-bootstrap.md  02-codegen.md  03-native-runtime.md  04-dsp-state.md  05-validation.md  06-release.md
runtime/native/: BridgeDispatcher.cpp  BridgeDispatcher.h  ParameterService.cpp  ParameterService.h  PluginWebView.cpp  PluginWebView.h  PresetService.cpp  PresetService.h  StateMigrationRegistry.cpp  StateMigrationRegistry.h  StateService.cpp  StateService.h  TransportService.cpp  TransportService.h  VisualizationService.cpp  VisualizationService.h
runtime/tools/: assert-no-development-url.mjs  embed-frontend.mjs
template/: README.md
tests/native/: DspRuntimeTest.cpp  FrontendAssetsSmokeTest.cpp  GeneratedCodeSmokeTest.cpp  NativeRuntimeTest.cpp  StatePresetTest.cpp  TransportVisualizationTest.cpp
